trying to add warning if no description

--- a/force-app/main/default/pages/ATSSCREENCAST.page
+++ b/force-app/main/default/pages/ATSSCREENCAST.page
@@ -182,6 +182,7 @@
       }
     }
 
+    //take a screen shot
     const takeScreenShot = async () => {
       try {
         const stream = await navigator.mediaDevices.getDisplayMedia({
